changed SCSS file

--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="center">
-    <img src="/assets/Angular-16.png" alt="logo" />
+    <img src="/assets/angular.webp" alt="logo" class="img" />
     <h2> </h2>
     <div class="boutons">
     <button mat-raised-button class="btn1" (click)="connect()">
