--- a/front/src/app/pages/home/home.component.scss
+++ b/front/src/app/pages/home/home.component.scss
@@ -5,6 +5,10 @@
     align-items: center;
     flex-direction: column;
   }
+  .img {
+    height: 80vh;
+    width: 80vh;
+  }
   .boutons{
     display: flex;
     flex-direction: row;
