--- a/front/src/app/feature/reception/welcome/welcome.component.html
+++ b/front/src/app/feature/reception/welcome/welcome.component.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="welcome">
-        <p>Bienvenue {{user.pseudo}}</p>
+        <h1>Bienvenue {{user.pseudo}}</h1>
         <button mat-raised-button class="btn" (click)="logOut()">
           <mat-icon>logout</mat-icon>
           <span >Se déconnecter</span>
