--- a/front/src/app/feature/reception/welcome/welcome.component.html
+++ b/front/src/app/feature/reception/welcome/welcome.component.html
@@ -5,7 +5,7 @@
     <title> Landing Page</title>
   </head>
   <body>
-    <div class="welcome">
+    <div class="welcome"  *ngIf="user">
         <h1>Bienvenue {{user.pseudo}}</h1>
         <button mat-raised-button class="btn" (click)="logOut()">
           <mat-icon>logout</mat-icon>
